apps/backend/base/60_netpol_default_deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  # deny all
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
